--- a/mystyle.css
+++ b/mystyle.css
@@ -8,8 +8,7 @@ h1 {
 }
 
 #hashbrowns {
-  padding: 8px;
-  background: #FFF;
+  padding: 1px;
+  background: #663333;
   width: 150px;
-  height: 150px;
 }
