--- a/mystyle.css
+++ b/mystyle.css
@@ -1,14 +1,30 @@
 body {
-  background-color: lightblue;
+    height: 200px;
+    background-color: #990033; /* For browsers that do not support gradients */
+    background-image: linear-gradient(to right, #990033 , #cccccc);
+  }
 }
 
 h1 {
-  color: navy;
-  margin-left: 20px;
+  color: #660000;
+  margin-left: 30px;
 }
 
 #hashbrowns {
   padding: 1px;
-  background: #663333;
-  width: 150px;
+  width: 300px;
+  text-shadow: 5px 5px #333333;
+  color: #cc9999;
+}
+
+#rcorners2 {
+  border-radius: 20px;
+  border: 6px solid #336699;
+  padding: 20px;
+  background: #ccffff;
+  height: 150px;
+  column-count: 6;
+  margin-top: 20px;
+  font-family: "Lucida Console", "Courier New", monospace;
+  color: #666666;
 }
